[gd_scene load_steps=29 format=3 uid="uid://beulniltj2hto"]

[ext_resource type="Script" uid="uid://b46v6j77q3xc8" path="res://scenes/difficulty_menu/difficulty_menu.gd" id="1_2ybyc"]
[ext_resource type="Texture2D" uid="uid://eij2hohstuhh" path="res://images/background.png" id="2_krwiw"]
[ext_resource type="PackedScene" uid="uid://cywhajrq5c1sc" path="res://scenes/common/title.tscn" id="3_2ybyc"]
[ext_resource type="Texture2D" uid="uid://chf34iv6d16q5" path="res://images/rails.png" id="4_c46ss"]

[sub_resource type="Gradient" id="Gradient_a1gy5"]
colors = PackedColorArray(0.24, 0.24, 0.24, 0.509804, 0.76, 0.76, 0.76, 0.509804)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bq5lc"]
gradient = SubResource("Gradient_a1gy5")

[sub_resource type="Gradient" id="Gradient_xac7c"]
colors = PackedColorArray(1, 1, 1, 0.403922, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0m3cs"]
gradient = SubResource("Gradient_xac7c")

[sub_resource type="Curve" id="Curve_i7nm7"]
_limits = [1.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 4), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tfctf"]
curve = SubResource("Curve_i7nm7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lc7d8"]
resource_local_to_scene = true
lifetime_randomness = 0.5
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 15.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.4
scale_curve = SubResource("CurveTexture_tfctf")
color_ramp = SubResource("GradientTexture1D_0m3cs")
color_initial_ramp = SubResource("GradientTexture1D_bq5lc")

[sub_resource type="Gradient" id="Gradient_pfwk8"]
colors = PackedColorArray(0.82, 0.82, 0.82, 1, 0.941176, 0.941176, 0.941176, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e8e6e"]
gradient = SubResource("Gradient_pfwk8")

[sub_resource type="Gradient" id="Gradient_i1d45"]
colors = PackedColorArray(0.66, 0.66, 0.66, 0.705882, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3gevl"]
gradient = SubResource("Gradient_i1d45")

[sub_resource type="Curve" id="Curve_1cflw"]
_limits = [1.0, 10.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 3.98359), 5.7967, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7e4hq"]
curve = SubResource("Curve_1cflw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fnlck"]
resource_local_to_scene = true
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector3(-0.995, -0.1, 0)
spread = 1.0
initial_velocity_min = 100.0
initial_velocity_max = 120.0
gravity = Vector3(0, 0, 0)
scale_min = 0.8
scale_max = 1.1
scale_curve = SubResource("CurveTexture_7e4hq")
color = Color(1, 1, 1, 0.290196)
color_ramp = SubResource("GradientTexture1D_3gevl")
color_initial_ramp = SubResource("GradientTexture1D_e8e6e")

[sub_resource type="Animation" id="Animation_ty162"]
resource_name = "changed"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.67451, 0.196078, 0.196078, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ud552"]
_data = {
&"changed_negative": SubResource("Animation_ty162")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ty162"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0, 0, 0, 0.501961)
border_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnpvi"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.501961)

[sub_resource type="AtlasTexture" id="AtlasTexture_esjue"]
atlas = ExtResource("4_c46ss")
region = Rect2(0, 240, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jvx0"]
atlas = ExtResource("4_c46ss")
region = Rect2(120, 240, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ybyc"]
atlas = ExtResource("4_c46ss")
region = Rect2(240, 240, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_krwiw"]
atlas = ExtResource("4_c46ss")
region = Rect2(360, 240, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5fy7"]
atlas = ExtResource("4_c46ss")
region = Rect2(480, 240, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6mec"]
atlas = ExtResource("4_c46ss")
region = Rect2(600, 240, 120, 120)
filter_clip = true

[node name="DifficultySettings" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ybyc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_krwiw")
centered = false

[node name="Title" parent="." instance=ExtResource("3_2ybyc")]
layout_mode = 2

[node name="TitleLabel" parent="Title" index="0"]
text = "GAME_TITLE"

[node name="ExhaustParticles" parent="Title/TitleTrain/TitleTrain/Train" index="0"]
process_material = SubResource("ParticleProcessMaterial_lc7d8")

[node name="SteamParticles" parent="Title/TitleTrain/TitleTrain/Train" index="3"]
process_material = SubResource("ParticleProcessMaterial_fnlck")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
columns = 4

[node name="Label2" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
tooltip_text = "SPEED_HINT"
mouse_filter = 1
text = "SPEED"

[node name="SpeedMinusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 120)
layout_mode = 2
text = "-"

[node name="SpeedPlusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(50, 120)
layout_mode = 2
text = "+"

[node name="SpeedLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "100"

[node name="Label3" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
tooltip_text = "TRAFFIC_DENSITY_HINT"
mouse_filter = 1
text = "TRAFFIC_DENSITY"

[node name="ConcurrentMinusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "-"

[node name="ConcurrentPlusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "+"

[node name="NumConcurrentTrainsLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "100"

[node name="NumStationsLabel" type="Label" parent="CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "NUMBER_STATIONS_HINT"
mouse_filter = 1
text = "SELECTED_STATIONS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/GridContainer/NumStationsLabel"]
libraries = {
&"": SubResource("AnimationLibrary_ud552")
}

[node name="StationButton0" type="Button" parent="CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ty162")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jnpvi")
toggle_mode = true
button_pressed = true
icon = SubResource("AtlasTexture_esjue")
icon_alignment = 1

[node name="StationButton1" type="Button" parent="CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ty162")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jnpvi")
toggle_mode = true
button_pressed = true
icon = SubResource("AtlasTexture_8jvx0")
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2

[node name="StationButton2" type="Button" parent="CenterContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ty162")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jnpvi")
toggle_mode = true
button_pressed = true
icon = SubResource("AtlasTexture_2ybyc")
icon_alignment = 1

[node name="StationButton3" type="Button" parent="CenterContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ty162")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jnpvi")
toggle_mode = true
button_pressed = true
icon = SubResource("AtlasTexture_krwiw")
icon_alignment = 1

[node name="StationButton4" type="Button" parent="CenterContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ty162")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jnpvi")
toggle_mode = true
button_pressed = true
icon = SubResource("AtlasTexture_o5fy7")
icon_alignment = 1

[node name="StationButton5" type="Button" parent="CenterContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ty162")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jnpvi")
toggle_mode = true
icon = SubResource("AtlasTexture_h6mec")
icon_alignment = 1

[node name="Label8" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
tooltip_text = "NUMBER_SWITCHES_HINT"
mouse_filter = 1
text = "NUMBER_SWITCHES"

[node name="SwitchesMinusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "-"

[node name="SwitchesPlusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "+"

[node name="NumSwitchesLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "5"

[node name="Label10" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
tooltip_text = "NUMBER_ERRORS_HINT"
mouse_filter = 1
text = "NUMBER_ERRORS"

[node name="ErrorsMinusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "-"

[node name="ErrorsPlusButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "+"

[node name="MaxErrorsLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "5"

[node name="VBoxContainer" type="HBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CenterContainer/GridContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "DIFFICULTY_HINT"
mouse_filter = 1
text = "DIFFICULTY"

[node name="FactorLabel" type="Label" parent="CenterContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "100 %"

[node name="Control" type="Control" parent="CenterContainer/GridContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="CenterContainer/GridContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "START"

[connection signal="pressed" from="CenterContainer/GridContainer/SpeedMinusButton" to="." method="_on_speed_minus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/SpeedPlusButton" to="." method="_on_speed_plus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/ConcurrentMinusButton" to="." method="_on_concurrent_minus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/ConcurrentPlusButton" to="." method="_on_concurrent_plus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/StationButton0" to="." method="_on_station_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/StationButton1" to="." method="_on_station_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/HBoxContainer/StationButton2" to="." method="_on_station_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/HBoxContainer/StationButton3" to="." method="_on_station_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/HBoxContainer/StationButton4" to="." method="_on_station_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/HBoxContainer/StationButton5" to="." method="_on_station_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/SwitchesMinusButton" to="." method="_on_switches_minus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/SwitchesPlusButton" to="." method="_on_switches_plus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/ErrorsMinusButton" to="." method="_on_errors_minus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/ErrorsPlusButton" to="." method="_on_errors_plus_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/StartButton" to="." method="_on_start_button_pressed"]

[editable path="Title"]
[editable path="Title/TitleTrain"]
[editable path="Title/TitleTrain/TitleTrain/Train"]
